<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterRouteInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/routeSteps"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="Route Name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/startLoc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="Start Location"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/routeType"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:hint="Route Type" />

            <Spinner
                android:id="@+id/surfaceType"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:hint="Surface" />

            <Spinner
                android:id="@+id/roadType"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:hint="Road" />

            <Spinner
                android:id="@+id/difficultyType"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:hint="Difficulty" />

            <Spinner
                android:id="@+id/terrainType"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:hint="Terrain" />

            <TextView
                android:id="@+id/notesText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Notes" />

            <EditText
                android:id="@+id/editNotes"
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border"
                android:ems="10"
                android:gravity="top|left"
                android:inputType="textLongMessage" />

            <ToggleButton
                android:id="@+id/favoriteBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textOff="Add to Favorites"
                android:textOn="Remove from Favorites" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"
                android:text="Save" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>