...
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/general_padding"
                    android:paddingRight="@dimen/general_padding">

                    <EditText
                        android:id="@+id/routeName"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:ems="10"
                        android:hint="Route Name"
                        android:inputType="textPersonName" />
...
